# aet_utilities

./: README.md
ConnectionManager/: CMakeLists.txt  ConnectionManager.h
ConnectionManager/Client/: SocketManager.cpp  SocketManager.h
ConnectionManager/Exception/: AbstractException.h  Exception.h  InitializationException.h  SocketException.h
ConnectionManager/Server/: SocketManager.cpp  SocketManager.h
ConnectionManager/Template/: client_template.cpp  server_template.cpp
JsonParser/: Json.h  JsonReader.cpp  JsonReader.h  JsonWriter.cpp  JsonWriter.h
